--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <section class="general">
       <main class="container" id="container">
+
         <div class="flex">
           <div class="switches" id="switches">
             <div><img src="images\icon-moon.svg" alt="" /></div>
             <div><img src="images\icon-sun.svg" alt="" /></div>
           </div>
+
           <div class="input" id="input"></div>
+
           <div class="numbers" id="numbers">
             <div class="padd" id="green">AC</div>
             <div class="padd" id="green">/</div>
@@ -24,7 +27,7 @@
             <div class="padd">7</div>
             <div class="padd">8</div>
             <div class="padd">9</div>
-            <div class="padd" id="red">--</div>
+            <div class="padd" id="red">-</div>
             <div class="padd">4</div> 
             <div class="padd">5</div>
             <div class="padd">6</div>
