--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-  </head>
+  </head> 
   <body>
     <section class="general">
       <main class="container" id="container">
-
         <div class="flex">
           <div class="switches" id="switches">
             <div><img src="images\icon-moon.svg" alt="" /></div>
@@ -40,6 +39,7 @@
             <div class="padd">0</div>
             <div class="padd">)</div>
             <div class="padd" id="red">=</div>
+          </div>
           </div>
         </div>
       </main>
