--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div><img src="images\icon-sun.svg" alt="" /></div>
           </div>
 
-          <div class="input" id="input"></div>
+          <button class="input" id="input"></button>
 
           <div class="numbers" id="numbers">
             <div class="padd" id="green">AC</div>
